# cosmic-color-picker

./: .gitignore  Cargo.toml  README.md  build.rs  io.github.pixeldoted.cosmic-color-picker.json  io.github.pixeldoted.cosmic-ext-color-picker.json  justfile  me.pixeldoted.CosmicColorPicker.flatpak.json
.github/workflows/: rust.yml
i18n/en/: cosmic_color_picker.ftl  cosmic_ext_color_picker.ftl
i18n/fr/: cosmic_color_picker.ftl
i18n/sv/: cosmic_color_picker.ftl
res/: app.desktop  me.pixeldoted.CosmicColorPicker.desktop  me.pixeldoted.CosmicColorPicker.metainfo.xml  metainfo.xml
src/: app.rs  colorspace.rs  lazy.rs  main.rs  widgets.rs
src/colorspace/: cmyk.rs  hsv.rs  oklab.rs  oklch.rs  rgb.rs
src/core/: localization.rs
src/shaders/: hsv.rs  hsv.wgsl  mod.rs  oklab.rs  oklab.wgsl  oklch.rs  oklch.wgsl  vertex.wgsl
