[package]
name = "cosmic-color-picker"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
i18n-embed-fl = "0.8"
log = "0.4.21"
once_cell = "1.19.0"
open = "5.1.3"
rust-embed = "8.3.0"
ashpd = "0.9.1"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "e162c59"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[build-dependencies]
vergen = { version = "8.3.1", features = ["git", "gitcl"] }
